week3/ex3/ex3Parser.output
   0  $accept : %entry% $end

   1  main : expr EOF

   2  command : expr SEMI
   3          | LET var EQ expr SEMI
   4          | LET REC var var var_expr SEMI

   5  expr : LET var EQ expr IN expr
   6       | LET REC var var var_expr IN expr
   7       | LET REC var var var_expr and_expr IN expr
   8       | IF expr THEN expr ELSE expr
   9       | expr EQ expr
  10       | expr LT expr
  11       | expr PLUS expr
  12       | expr MINUS expr
  13       | expr TIMES expr
  14       | expr DIV expr
  15       | FUN var ARROW expr
  16       | expr apply_expr
  17       | MATCH expr WITH pattern_expr END
  18       | expr CONS expr
  19       | cons_expr
  20       | apply_expr

  21  var_expr : EQ expr
  22           | var var_expr

  23  and_expr : AND var var EQ expr and_expr
  24           |

  25  cons_expr : noncons_expr
  26            | expr CONS cons_expr

  27  noncons_expr : apply_expr
  28               | LPAR expr COMMA expr_list RPAR

  29  expr_list : expr
  30            | expr COMMA expr_list

  31  pattern_expr : pattern ARROW expr
  32               | pattern ARROW expr OR pattern_expr

  33  pattern : INT
  34          | BOOL
  35          | ID
  36          | LBRACKET RBRACKET
  37          | LPAR pattern COMMA pattern_list RPAR
  38          | pattern CONS pattern

  39  pattern_list : pattern
  40               | pattern COMMA pattern_list

  41  apply_expr : INT
  42             | BOOL
  43             | ID
  44             | LPAR expr RPAR
  45             | LBRACKET RBRACKET

  46  var : ID

  47  %entry% : '\001' main
  48          | '\002' command

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . main  (47)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	main  goto 13
	expr  goto 14
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 2
	%entry% : '\002' . command  (48)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 18
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	command  goto 19
	expr  goto 20
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	apply_expr : INT .  (41)

	.  reduce 41


state 5
	apply_expr : BOOL .  (42)

	.  reduce 42


state 6
	apply_expr : ID .  (43)

	.  reduce 43


state 7
	expr : LET . var EQ expr IN expr  (5)
	expr : LET . REC var var var_expr IN expr  (6)
	expr : LET . REC var var var_expr and_expr IN expr  (7)

	ID  shift 21
	REC  shift 22
	.  error

	var  goto 23


state 8
	expr : IF . expr THEN expr ELSE expr  (8)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 24
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 9
	noncons_expr : LPAR . expr COMMA expr_list RPAR  (28)
	apply_expr : LPAR . expr RPAR  (44)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 25
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 10
	expr : FUN . var ARROW expr  (15)

	ID  shift 21
	.  error

	var  goto 26


state 11
	expr : MATCH . expr WITH pattern_expr END  (17)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 27
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 12
	apply_expr : LBRACKET . RBRACKET  (45)

	RBRACKET  shift 28
	.  error


state 13
	%entry% : '\001' main .  (47)

	.  reduce 47


state 14
	main : expr . EOF  (1)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)
	cons_expr : expr . CONS cons_expr  (26)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	EOF  shift 36
	CONS  shift 37
	LBRACKET  shift 12
	.  error

	apply_expr  goto 38


15: reduce/reduce conflict (reduce 20, reduce 27) on INT
15: reduce/reduce conflict (reduce 20, reduce 27) on BOOL
15: reduce/reduce conflict (reduce 20, reduce 27) on ID
15: reduce/reduce conflict (reduce 20, reduce 27) on IN
15: reduce/reduce conflict (reduce 20, reduce 27) on PLUS
15: reduce/reduce conflict (reduce 20, reduce 27) on MINUS
15: reduce/reduce conflict (reduce 20, reduce 27) on TIMES
15: reduce/reduce conflict (reduce 20, reduce 27) on DIV
15: reduce/reduce conflict (reduce 20, reduce 27) on EQ
15: reduce/reduce conflict (reduce 20, reduce 27) on LT
15: reduce/reduce conflict (reduce 20, reduce 27) on THEN
15: reduce/reduce conflict (reduce 20, reduce 27) on ELSE
15: reduce/reduce conflict (reduce 20, reduce 27) on LPAR
15: reduce/reduce conflict (reduce 20, reduce 27) on RPAR
15: reduce/reduce conflict (reduce 20, reduce 27) on WITH
15: reduce/reduce conflict (reduce 20, reduce 27) on OR
15: reduce/reduce conflict (reduce 20, reduce 27) on END
15: reduce/reduce conflict (reduce 20, reduce 27) on SEMI
15: reduce/reduce conflict (reduce 20, reduce 27) on EOF
15: reduce/reduce conflict (reduce 20, reduce 27) on COMMA
15: reduce/reduce conflict (reduce 20, reduce 27) on CONS
15: reduce/reduce conflict (reduce 20, reduce 27) on LBRACKET
15: reduce/reduce conflict (reduce 20, reduce 27) on AND
state 15
	expr : apply_expr .  (20)
	noncons_expr : apply_expr .  (27)

	.  reduce 20


state 16
	expr : cons_expr .  (19)

	.  reduce 19


state 17
	cons_expr : noncons_expr .  (25)

	.  reduce 25


state 18
	command : LET . var EQ expr SEMI  (3)
	command : LET . REC var var var_expr SEMI  (4)
	expr : LET . var EQ expr IN expr  (5)
	expr : LET . REC var var var_expr IN expr  (6)
	expr : LET . REC var var var_expr and_expr IN expr  (7)

	ID  shift 21
	REC  shift 39
	.  error

	var  goto 40


state 19
	%entry% : '\002' command .  (48)

	.  reduce 48


state 20
	command : expr . SEMI  (2)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)
	cons_expr : expr . CONS cons_expr  (26)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	SEMI  shift 41
	CONS  shift 37
	LBRACKET  shift 12
	.  error

	apply_expr  goto 38


state 21
	var : ID .  (46)

	.  reduce 46


state 22
	expr : LET REC . var var var_expr IN expr  (6)
	expr : LET REC . var var var_expr and_expr IN expr  (7)

	ID  shift 21
	.  error

	var  goto 42


state 23
	expr : LET var . EQ expr IN expr  (5)

	EQ  shift 43
	.  error


state 24
	expr : IF expr . THEN expr ELSE expr  (8)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)
	cons_expr : expr . CONS cons_expr  (26)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	THEN  shift 44
	LPAR  shift 35
	CONS  shift 37
	LBRACKET  shift 12
	.  error

	apply_expr  goto 38


state 25
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)
	cons_expr : expr . CONS cons_expr  (26)
	noncons_expr : LPAR expr . COMMA expr_list RPAR  (28)
	apply_expr : LPAR expr . RPAR  (44)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	RPAR  shift 45
	COMMA  shift 46
	CONS  shift 37
	LBRACKET  shift 12
	.  error

	apply_expr  goto 38


state 26
	expr : FUN var . ARROW expr  (15)

	ARROW  shift 47
	.  error


state 27
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : MATCH expr . WITH pattern_expr END  (17)
	expr : expr . CONS expr  (18)
	cons_expr : expr . CONS cons_expr  (26)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	WITH  shift 48
	CONS  shift 37
	LBRACKET  shift 12
	.  error

	apply_expr  goto 38


state 28
	apply_expr : LBRACKET RBRACKET .  (45)

	.  reduce 45


state 29
	expr : expr PLUS . expr  (11)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 49
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 30
	expr : expr MINUS . expr  (12)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 50
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 31
	expr : expr TIMES . expr  (13)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 51
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 32
	expr : expr DIV . expr  (14)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 52
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 33
	expr : expr EQ . expr  (9)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 53
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 34
	expr : expr LT . expr  (10)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 54
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 35
	apply_expr : LPAR . expr RPAR  (44)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 55
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 36
	main : expr EOF .  (1)

	.  reduce 1


state 37
	expr : expr CONS . expr  (18)
	cons_expr : expr CONS . cons_expr  (26)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 56
	apply_expr  goto 15
	cons_expr  goto 57
	noncons_expr  goto 17


state 38
	expr : expr apply_expr .  (16)

	.  reduce 16


state 39
	command : LET REC . var var var_expr SEMI  (4)
	expr : LET REC . var var var_expr IN expr  (6)
	expr : LET REC . var var var_expr and_expr IN expr  (7)

	ID  shift 21
	.  error

	var  goto 58


state 40
	command : LET var . EQ expr SEMI  (3)
	expr : LET var . EQ expr IN expr  (5)

	EQ  shift 59
	.  error


state 41
	command : expr SEMI .  (2)

	.  reduce 2


state 42
	expr : LET REC var . var var_expr IN expr  (6)
	expr : LET REC var . var var_expr and_expr IN expr  (7)

	ID  shift 21
	.  error

	var  goto 60


state 43
	expr : LET var EQ . expr IN expr  (5)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 61
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 44
	expr : IF expr THEN . expr ELSE expr  (8)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 62
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 45
	apply_expr : LPAR expr RPAR .  (44)

	.  reduce 44


state 46
	noncons_expr : LPAR expr COMMA . expr_list RPAR  (28)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 63
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17
	expr_list  goto 64


state 47
	expr : FUN var ARROW . expr  (15)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 65
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 48
	expr : MATCH expr WITH . pattern_expr END  (17)

	INT  shift 66
	BOOL  shift 67
	ID  shift 68
	LPAR  shift 69
	LBRACKET  shift 70
	.  error

	pattern_expr  goto 71
	pattern  goto 72


state 49
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr PLUS expr .  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)
	cons_expr : expr . CONS cons_expr  (26)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	TIMES  shift 31
	DIV  shift 32
	LPAR  shift 35
	LBRACKET  shift 12
	IN  reduce 11
	PLUS  reduce 11
	MINUS  reduce 11
	EQ  reduce 11
	LT  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	RPAR  reduce 11
	WITH  reduce 11
	OR  reduce 11
	END  reduce 11
	SEMI  reduce 11
	EOF  reduce 11
	COMMA  reduce 11
	CONS  reduce 11
	AND  reduce 11

	apply_expr  goto 38


state 50
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr MINUS expr .  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)
	cons_expr : expr . CONS cons_expr  (26)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	TIMES  shift 31
	DIV  shift 32
	LPAR  shift 35
	LBRACKET  shift 12
	IN  reduce 12
	PLUS  reduce 12
	MINUS  reduce 12
	EQ  reduce 12
	LT  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAR  reduce 12
	WITH  reduce 12
	OR  reduce 12
	END  reduce 12
	SEMI  reduce 12
	EOF  reduce 12
	COMMA  reduce 12
	CONS  reduce 12
	AND  reduce 12

	apply_expr  goto 38


state 51
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr TIMES expr .  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)
	cons_expr : expr . CONS cons_expr  (26)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LPAR  shift 35
	LBRACKET  shift 12
	IN  reduce 13
	PLUS  reduce 13
	MINUS  reduce 13
	TIMES  reduce 13
	DIV  reduce 13
	EQ  reduce 13
	LT  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	WITH  reduce 13
	OR  reduce 13
	END  reduce 13
	SEMI  reduce 13
	EOF  reduce 13
	COMMA  reduce 13
	CONS  reduce 13
	AND  reduce 13

	apply_expr  goto 38


state 52
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr DIV expr .  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)
	cons_expr : expr . CONS cons_expr  (26)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LPAR  shift 35
	LBRACKET  shift 12
	IN  reduce 14
	PLUS  reduce 14
	MINUS  reduce 14
	TIMES  reduce 14
	DIV  reduce 14
	EQ  reduce 14
	LT  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	WITH  reduce 14
	OR  reduce 14
	END  reduce 14
	SEMI  reduce 14
	EOF  reduce 14
	COMMA  reduce 14
	CONS  reduce 14
	AND  reduce 14

	apply_expr  goto 38


state 53
	expr : expr . EQ expr  (9)
	expr : expr EQ expr .  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)
	cons_expr : expr . CONS cons_expr  (26)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	LPAR  shift 35
	CONS  shift 37
	LBRACKET  shift 12
	IN  reduce 9
	EQ  reduce 9
	LT  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	RPAR  reduce 9
	WITH  reduce 9
	OR  reduce 9
	END  reduce 9
	SEMI  reduce 9
	EOF  reduce 9
	COMMA  reduce 9
	AND  reduce 9

	apply_expr  goto 38


state 54
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr LT expr .  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)
	cons_expr : expr . CONS cons_expr  (26)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	LPAR  shift 35
	CONS  shift 37
	LBRACKET  shift 12
	IN  reduce 10
	EQ  reduce 10
	LT  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	RPAR  reduce 10
	WITH  reduce 10
	OR  reduce 10
	END  reduce 10
	SEMI  reduce 10
	EOF  reduce 10
	COMMA  reduce 10
	AND  reduce 10

	apply_expr  goto 38


state 55
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)
	cons_expr : expr . CONS cons_expr  (26)
	apply_expr : LPAR expr . RPAR  (44)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	RPAR  shift 45
	CONS  shift 37
	LBRACKET  shift 12
	.  error

	apply_expr  goto 38


state 56
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)
	expr : expr CONS expr .  (18)
	cons_expr : expr . CONS cons_expr  (26)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	LPAR  shift 35
	CONS  shift 37
	LBRACKET  shift 12
	IN  reduce 18
	EQ  reduce 18
	LT  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	RPAR  reduce 18
	WITH  reduce 18
	OR  reduce 18
	END  reduce 18
	SEMI  reduce 18
	EOF  reduce 18
	COMMA  reduce 18
	AND  reduce 18

	apply_expr  goto 38


57: reduce/reduce conflict (reduce 19, reduce 26) on INT
57: reduce/reduce conflict (reduce 19, reduce 26) on BOOL
57: reduce/reduce conflict (reduce 19, reduce 26) on ID
57: reduce/reduce conflict (reduce 19, reduce 26) on IN
57: reduce/reduce conflict (reduce 19, reduce 26) on PLUS
57: reduce/reduce conflict (reduce 19, reduce 26) on MINUS
57: reduce/reduce conflict (reduce 19, reduce 26) on TIMES
57: reduce/reduce conflict (reduce 19, reduce 26) on DIV
57: reduce/reduce conflict (reduce 19, reduce 26) on EQ
57: reduce/reduce conflict (reduce 19, reduce 26) on LT
57: reduce/reduce conflict (reduce 19, reduce 26) on THEN
57: reduce/reduce conflict (reduce 19, reduce 26) on ELSE
57: reduce/reduce conflict (reduce 19, reduce 26) on LPAR
57: reduce/reduce conflict (reduce 19, reduce 26) on RPAR
57: reduce/reduce conflict (reduce 19, reduce 26) on WITH
57: reduce/reduce conflict (reduce 19, reduce 26) on OR
57: reduce/reduce conflict (reduce 19, reduce 26) on END
57: reduce/reduce conflict (reduce 19, reduce 26) on SEMI
57: reduce/reduce conflict (reduce 19, reduce 26) on EOF
57: reduce/reduce conflict (reduce 19, reduce 26) on COMMA
57: reduce/reduce conflict (reduce 19, reduce 26) on CONS
57: reduce/reduce conflict (reduce 19, reduce 26) on LBRACKET
57: reduce/reduce conflict (reduce 19, reduce 26) on AND
state 57
	expr : cons_expr .  (19)
	cons_expr : expr CONS cons_expr .  (26)

	.  reduce 19


state 58
	command : LET REC var . var var_expr SEMI  (4)
	expr : LET REC var . var var_expr IN expr  (6)
	expr : LET REC var . var var_expr and_expr IN expr  (7)

	ID  shift 21
	.  error

	var  goto 73


state 59
	command : LET var EQ . expr SEMI  (3)
	expr : LET var EQ . expr IN expr  (5)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 74
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 60
	expr : LET REC var var . var_expr IN expr  (6)
	expr : LET REC var var . var_expr and_expr IN expr  (7)

	ID  shift 21
	EQ  shift 75
	.  error

	var  goto 76
	var_expr  goto 77


state 61
	expr : LET var EQ expr . IN expr  (5)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)
	cons_expr : expr . CONS cons_expr  (26)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	IN  shift 78
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	CONS  shift 37
	LBRACKET  shift 12
	.  error

	apply_expr  goto 38


state 62
	expr : IF expr THEN expr . ELSE expr  (8)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)
	cons_expr : expr . CONS cons_expr  (26)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	ELSE  shift 79
	LPAR  shift 35
	CONS  shift 37
	LBRACKET  shift 12
	.  error

	apply_expr  goto 38


state 63
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)
	cons_expr : expr . CONS cons_expr  (26)
	expr_list : expr .  (29)
	expr_list : expr . COMMA expr_list  (30)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	COMMA  shift 80
	CONS  shift 37
	LBRACKET  shift 12
	RPAR  reduce 29

	apply_expr  goto 38

